Update index.html - Atualizando links

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         <p class="profile-name" data-theme-element>HigorAntonio</p>
       </header>
       <section class="links">
-        <a href="#" class="link" data-theme-element>Inscreva-se no meu Curso</a>
-        <a href="#" class="link" data-theme-element>Baixe meu e-book</a>
-        <a href="#" class="link" data-theme-element>Veja meu portifólio</a>
-        <a href="#" class="link" data-theme-element>Conheça meus projetos</a>
+        <a href="./assets/curriculo_higor_antonio_dos_santos_benevenuto_03_05_2025.pdf" class="link" data-theme-element>Meu Currículo</a>
+        <a href="https://higorantonio.github.io/consumo-api-viacep/" class="link" data-theme-element>Projeto Pessoal: AutoCEP</a>
+        <a href="https://higorantonio.github.io/event-form-with-input-validation/" class="link" data-theme-element>Projeto Pessoal: Formulário com Validação</a>
+        <a href="https://higorantonio.github.io/portfolio-dev/" class="link" data-theme-element>Projeto Pessoal: Portfólio</a>
       </section>
       <section class="social-links">
         <a
-          href="#"
+          href="https://github.com/HigorAntonio"
           class="social-link"
           aria-label="Link do GitHub"
           data-theme-element
@@ -50,7 +50,7 @@
           ></div>
         </a>
         <a
-          href="#"
+          href="https://www.instagram.com/higor_benevenuto/"
           class="social-link"
           aria-label="Link do Instagram"
           data-theme-element
@@ -62,7 +62,7 @@
           ></div>
         </a>
         <a
-          href="#"
+          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
           class="social-link"
           aria-label="Icone do YouTube"
           data-theme-element
@@ -74,7 +74,7 @@
           ></div>
         </a>
         <a
-          href="#"
+          href="https://www.linkedin.com/in/higor-ant%C3%B4nio-dos-santos-benevenuto-5b428b11b/"
           class="social-link"
           aria-label="Icone do LinkedIn"
           data-theme-element
