--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
         <p class="profile-name" data-theme-element>HigorAntonio</p>
       </header>
       <section class="links">
-        <a href="./assets/curriculo_higor_antonio_dos_santos_benevenuto_03_05_2025.pdf" class="link" data-theme-element>Meu Currículo</a>
-        <a href="https://higorantonio.github.io/consumo-api-viacep/" class="link" data-theme-element>Projeto Pessoal: AutoCEP</a>
-        <a href="https://higorantonio.github.io/event-form-with-input-validation/" class="link" data-theme-element>Projeto Pessoal: Formulário com Validação</a>
-        <a href="https://higorantonio.github.io/portfolio-dev/" class="link" data-theme-element>Projeto Pessoal: Portfólio</a>
+        <a href="./assets/curriculo_higor_antonio_dos_santos_benevenuto_03_05_2025.pdf" target="_blank" class="link" data-theme-element>Meu Currículo</a>
+        <a href="https://higorantonio.github.io/consumo-api-viacep/" target="_blank" class="link" data-theme-element>Projeto Pessoal: AutoCEP</a>
+        <a href="https://higorantonio.github.io/event-form-with-input-validation/" target="_blank" class="link" data-theme-element>Projeto Pessoal: Formulário com Validação</a>
+        <a href="https://higorantonio.github.io/portfolio-dev/" target="_blank" class="link" data-theme-element>Projeto Pessoal: Portfólio</a>
       </section>
       <section class="social-links">
         <a
           href="https://github.com/HigorAntonio"
+          target="_blank"
           class="social-link"
           aria-label="Link do GitHub"
           data-theme-element
@@ -51,6 +52,7 @@
         </a>
         <a
           href="https://www.instagram.com/higor_benevenuto/"
+          target="_blank"
           class="social-link"
           aria-label="Link do Instagram"
           data-theme-element
@@ -63,6 +65,7 @@
         </a>
         <a
           href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          target="_blank"
           class="social-link"
           aria-label="Icone do YouTube"
           data-theme-element
@@ -75,6 +78,7 @@
         </a>
         <a
           href="https://www.linkedin.com/in/higor-ant%C3%B4nio-dos-santos-benevenuto-5b428b11b/"
+          target="_blank"
           class="social-link"
           aria-label="Icone do LinkedIn"
           data-theme-element
